# cmd/server/db/sqlc/models.go
@@ -61,9 +61,10 @@ type User struct {
 	HashedPassword    string    `json:"hashed_password"`
 	FullName          string    `json:"full_name"`
 	Email             string    `json:"email"`
+	IsEmailVerified   bool      `json:"is_email_verified"`
+	Role              string    `json:"role"`
 	PasswordChangedAt time.Time `json:"password_changed_at"`
 	CreatedAt         time.Time `json:"created_at"`
-	IsEmailVerified   bool      `json:"is_email_verified"`
 }
 
 type VerifyEmail struct {
